--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.shortcircuit</groupId>
     <artifactId>shortcommands</artifactId>
+    <packaging>pom</packaging>
     <version>1.6.0</version>
+    <modules>
+        <module>../CommLib</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
